--- a/main.html
+++ b/main.html
@@ -50,36 +50,133 @@
           <div class="article">
             <a href="#"><h2 class="atitle">如何评价“青春才几年，疫情占三年”这句话</h2></a>
             <p class="acontent">我不理解，一群19级到21级的本科生，一群18-20岁的年轻人，抱怨抱怨疫情导致封校，没有体验真正的大学生活，居然可以遭到大家如此的口诛笔伐？大学本该是图书馆、社团、课堂、恋爱，大学...阅读全文</p>
-            <div id="文章功能栏">
-              <button name="赞同">赞同▲</button>
-              <button name="反对">▼</button>
-              
+            <div id="文章功能栏" style="display: flex;">
+              <button name="赞同" class="文章功能">▲赞同2333</button>
+              <button name="反对" class="文章功能">▼</button>
+              <button name="评论" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/评论.png" width="20" alt="评论">
+                <p>233条评论</p>
+              </button>
+              <button name="分享" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/分享.png" width="20" alt="分享">
+                <p>分享</p>
+              </button>
+              <button name="喜欢" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/喜欢.png" width="20" alt="喜欢">
+                <p>喜欢</p>
+              </button>
+              <button name="更多" class="文章功能">...</button>
             </div>
           </div>
 
           <div class="article">
             <a href="#"><h2 class="atitle">有哪些能玩上一天的网站？</h2></a>
             <p class="acontent">1、烧脑小游戏网址：https://nazo.one-story.cn/我敢说，这是绝对能逼疯你的小游戏，第一关的通过率还不到60%，你能过关吗？2、反应测试网址：https://www.humanbenchmark.com/test...阅读全文</p>
+            <div id="文章功能栏" style="display: flex;">
+              <button name="赞同" class="文章功能">▲赞同2333</button>
+              <button name="反对" class="文章功能">▼</button>
+              <button name="评论" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/评论.png" width="20" alt="评论">
+                <p>233条评论</p>
+              </button>
+              <button name="分享" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/分享.png" width="20" alt="分享">
+                <p>分享</p>
+              </button>
+              <button name="喜欢" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/喜欢.png" width="20" alt="喜欢">
+                <p>喜欢</p>
+              </button>
+              <button name="更多" class="文章功能">...</button>
+            </div>
           </div>
 
           <div class="article">
             <a href="#"><h2 class="atitle">计算机领域有哪些经典的典故或笑话？</h2></a>
             <p class="acontent">1、书法某程序员对书法十分感兴趣，退休后决定在这方面有所建树。于是花重金购买了上等的文房四宝。一日，饭后突生雅兴，一番磨墨拟纸，并点上了上好的...阅读全文</p>
+            <div id="文章功能栏" style="display: flex;">
+              <button name="赞同" class="文章功能">▲赞同2333</button>
+              <button name="反对" class="文章功能">▼</button>
+              <button name="评论" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/评论.png" width="20" alt="评论">
+                <p>233条评论</p>
+              </button>
+              <button name="分享" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/分享.png" width="20" alt="分享">
+                <p>分享</p>
+              </button>
+              <button name="喜欢" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/喜欢.png" width="20" alt="喜欢">
+                <p>喜欢</p>
+              </button>
+              <button name="更多" class="文章功能">...</button>
+            </div>
           </div>
 
           <div class="article">
             <a href="#"><h2 class="atitle">为什么有些人不喜欢承认错误？</h2></a>
             <p class="acontent">在垃圾环境习得的防卫策略。在大部分圈子中，承认错误是一个信号，意味着允许别人来打压羞辱你。最典型的一个表现是，“指出别人说错”为什么要被刻毒地以“打脸”两个字形容呢？你细揣摩“打脸”这个词，大概就能理解“认错”和“羞辱”间牢固的关联关...阅读全文</p>
+            <div id="文章功能栏" style="display: flex;">
+              <button name="赞同" class="文章功能">▲赞同2333</button>
+              <button name="反对" class="文章功能">▼</button>
+              <button name="评论" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/评论.png" width="20" alt="评论">
+                <p>233条评论</p>
+              </button>
+              <button name="分享" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/分享.png" width="20" alt="分享">
+                <p>分享</p>
+              </button>
+              <button name="喜欢" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/喜欢.png" width="20" alt="喜欢">
+                <p>喜欢</p>
+              </button>
+              <button name="更多" class="文章功能">...</button>
+            </div>
           </div>
 
           <div class="article">
             <a href="#"><h2 class="atitle">如果智能机器人真的大批量取代人工，那真的会失业么？</h2></a>
             <p class="acontent">先总结观点：1）从一个角度看：机器确实在取代人工，而且取代的速度越来越快。2）但从另一个角度观察这个事实，你会发现不一样的结论：不是机器抢了人的工作，而是人曾经抢了机器的工作，如今机器在抢回去。3）真正属于人的工作，机器从未抢走，未来也不...阅读全文</p>
+            <div id="文章功能栏" style="display: flex;">
+              <button name="赞同" class="文章功能">▲赞同2333</button>
+              <button name="反对" class="文章功能">▼</button>
+              <button name="评论" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/评论.png" width="20" alt="评论">
+                <p>233条评论</p>
+              </button>
+              <button name="分享" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/分享.png" width="20" alt="分享">
+                <p>分享</p>
+              </button>
+              <button name="喜欢" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/喜欢.png" width="20" alt="喜欢">
+                <p>喜欢</p>
+              </button>
+              <button name="更多" class="文章功能">...</button>
+            </div>
           </div>
 
           <div class="article">
             <a href="#"><h2 class="atitle">如何在一次核打击中生存下来？</h2></a>
             <p class="acontent">原文来自Wikihow冷战结束了20多年，许多人也未处在核武器或者放射性武器的威胁下。但核打击仍然是很真实的威胁。世界政治格局还远远谈不上稳定。人类的天性在过去20年没有改变，“回荡在人类历史上最持久的声音就是擂擂的战...阅读全文</p>
+            <div id="文章功能栏" style="display: flex;">
+              <button name="赞同" class="文章功能">▲赞同2333</button>
+              <button name="反对" class="文章功能">▼</button>
+              <button name="评论" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/评论.png" width="20" alt="评论">
+                <p>233条评论</p>
+              </button>
+              <button name="分享" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/分享.png" width="20" alt="分享">
+                <p>分享</p>
+              </button>
+              <button name="喜欢" style="display: flex; align-items: center;"  class="文章功能">
+                <img src="images/喜欢.png" width="20" alt="喜欢">
+                <p>喜欢</p>
+              </button>
+              <button name="更多" class="文章功能">...</button>
+            </div>
           </div>
 
         </main>
