Finish Followers'  Page

--- a/main.html
+++ b/main.html
@@ -13,9 +13,9 @@
       <a href="main.html" id="mainlogo"><img src="images/zhihulogo.png" alt="logo"></a>
 
       <a href="main.html" class="menu" id="curpage"><span>首页</span></a>
-      <a href="vip.html" class="menu">会员</a>
-      <a href="discover.html" class="menu">发现</a>
-      <a href="answer.html" class="menu">等你来答</a>
+      <a href="vip.html" class="menu"><span>会员</span></a>
+      <a href="discover.html" class="menu"><span>发现</span></a>
+      <a href="answer.html" class="menu"><span>等你来答</span></a>
       
 
       <div id="搜索框">
