Finish hot page

--- a/follow.html
+++ b/follow.html
@@ -38,7 +38,7 @@
 
         <nav>
           <ul id="切换栏">
-            <a href="follow.html" id="curpage"><li style="color: 2a64f6;">关注</li></a>
+            <a href="follow.html" id="curpage"><li>关注</li></a>
             <a href="main.html"><li >推荐</li></a>
             <a href="hot.html"><li>热榜</li></a>
             <a href="zvideo.html"><li>视频</li></a>
