--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title>MyZhihu</title>
+    <title>MainPage</title>
   </head>
 
   <body>
@@ -39,7 +39,7 @@
         <nav>
           <ul id="切换栏">
             <a href="follow.html"><li>关注</li></a>
-            <a href="main.html" id="curpage"><li style="color: 2a64f6;">推荐</li></a>
+            <a href="main.html" id="curpage"><li>推荐</li></a>
             <a href="hot.html"><li>热榜</li></a>
             <a href="zvideo.html"><li>视频</li></a>
           </ul>
